--- a/angular2/package.json
+++ b/angular2/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "build": "ng build"
+    "build": "ng build --prod"
   },
   "private": true,
   "dependencies": {
