--- a/angular2/package.json
+++ b/angular2/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.15",
     "core-js": "^2.4.1",
+    "ng2-toasty": "^2.2.2",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
