--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,11 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.15</version>
 		</dependency>
+		<dependency>
+			<groupId>com.joestelmach</groupId>
+			<artifactId>natty</artifactId>
+			<version>0.12</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
