--- a/pom.xml
+++ b/pom.xml
@@ -318,7 +318,7 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.0</version>
 				<configuration>
-					<workingDirectory>angular2</workingDirectory>
+					<workingDirectory>angular</workingDirectory>
 					<installDirectory>temp</installDirectory>
 				</configuration>
 				<executions>
@@ -374,7 +374,7 @@
 							<outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/</outputDirectory>
 							<resources>
 								<resource>
-									<directory>${project.basedir}/angular2/dist</directory>
+									<directory>${project.basedir}/angular/dist</directory>
 								</resource>
 							</resources>
 						</configuration>
