--- a/angular/package.json
+++ b/angular/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ng2-toasty": "^2.2.2",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@angular/cli": "^1.0.3",
     "@angular/compiler-cli": "^2.1.0",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "codelyzer": "~1.0.0-beta.3",
